--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <p class="animate__animated fanimate__adeInUp">Discord's most powerful bot, now with even more features.</p>
           <div style="left:20">
           <a href="support.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get support</a>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp scrollto">Add the bot</a>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=759894371079290900&permissions=8&scope=bot" class="btn-get-started animate__animated animate__fadeInUp scrollto">Add the bot</a>
           <a href="" class="btn-get-started animate__animated animate__fadeInUp scrollto">Command list</a>
         </div>
         </div>
