--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="https://cdn.discordapp.com/avatars/580148215760945152/ed25b12420f6905c1e6878bf28ac4600.png?size=1024" class="img-fluid" alt="">
+                <img src="assets/img/compnerd.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>CompNerd</h4>
