--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://cdn.discordapp.com/avatars/679944178079367179/3e2ee9cbc47ee06c3588b4ade9ae1387.png?size=1024" class="img-fluid" alt="">
+                <img src="assets/img/someone.gif" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Someone</h4>
@@ -350,7 +350,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="https://cdn.discordapp.com/avatars/714747055536472075/541053c734c272d8b7d0c8e612764a5d.png?size=1024" class="img-fluid" alt="">
+                <img src="assets/img/levi1.gif" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>KyleAPI</h4>
@@ -362,7 +362,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="https://cdn.discordapp.com/avatars/742743039445041173/225debf68eb4e2a9896a70e6bfed821d.png?size=1024" class="img-fluid" alt="">
+                <img src="assets/img/camden.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Camden</h4>
