--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+          <p>Our Hard Working Team</p>
         </div>
 
         <div class="row">
@@ -342,7 +342,7 @@
               </div>
               <div class="member-info">
                 <h4>Someone</h4>
-                <span>Bot Programing</span>
+                <span>Bot Developer</span>
               </div>
             </div>
           </div>
@@ -354,7 +354,7 @@
               </div>
               <div class="member-info">
                 <h4>KyleAPI</h4>
-                <span>Bot Programing</span>
+                <span>Bot Developer</span>
               </div>
             </div>
           </div>
@@ -366,7 +366,7 @@
               </div>
               <div class="member-info">
                 <h4>Camden</h4>
-                <span>Kool kids club</span>
+                <span>Website Developer</span>
               </div>
             </div>
           </div>
@@ -378,7 +378,7 @@
               </div>
               <div class="member-info">
                 <h4>CompNerd</h4>
-                <span>"All in good time"</span>
+                <span>"Website Developer"</span>
               </div>
             </div>
           </div>
