--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="assets/img/someone.gif" class="img-fluid" alt="">
+                <img src="assets/img/someone.gif" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Someone</h4>
@@ -350,7 +350,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/levi1.gif" class="img-fluid" alt="">
+                <img src="assets/img/levi1.gif" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>KyleAPI</h4>
@@ -362,7 +362,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/camden.png" class="img-fluid" alt="">
+                <img src="assets/img/camden.png" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Camden</h4>
@@ -374,7 +374,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/compnerd.png" class="img-fluid" alt="">
+                <img src="assets/img/compnerd.png" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>CompNerd</h4>
