--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <img src="assets/img/someone.gif" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Someone</h4>
+                <h4>Someone#6969</h4>
                 <span>Bot Developer</span>
               </div>
             </div>
@@ -353,7 +353,7 @@
                 <img src="assets/img/levi1.gif" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>KyleAPI</h4>
+                <h4>Levi.#1337</h4>
                 <span>Bot Developer</span>
               </div>
             </div>
@@ -365,7 +365,7 @@
                 <img src="assets/img/camden.png" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Camden</h4>
+                <h4>Camden#8754</h4>
                 <span>Website Developer</span>
               </div>
             </div>
@@ -377,7 +377,7 @@
                 <img src="assets/img/compnerd.png" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>CompNerd</h4>
+                <h4>CompNerd#6595</h4>
                 <span>"Website Developer"</span>
               </div>
             </div>
