--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Add the bot</a></li>
+          <li><a href="https://discord.com/api/oauth2/authorize?client_id=759894371079290900&permissions=8&scope=bot">Add the bot</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="documentation.html">Commands</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="support.html">Get support</a></li>
+          <li><a href="#commands">Commands</a></li>
+          <li><a href="mailto:support@levibot.xyz">Contact Us</a></li>
+          <li><a href="https://discord.gg/ScR7Y2c">Get support</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -72,9 +72,9 @@
           <h2 class="animate__animated animate__fadeInDown">Levi</h2>
           <p class="animate__animated fanimate__adeInUp">Discord's most powerful bot, now with even more features.</p>
           <div style="left:20">
-          <a href="support.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get support</a>
+          <a href="https://discord.gg/ScR7Y2c" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get support</a>
           <a href="https://discord.com/api/oauth2/authorize?client_id=759894371079290900&permissions=8&scope=bot" class="btn-get-started animate__animated animate__fadeInUp scrollto">Add the bot</a>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp scrollto">Command list</a>
+          <a href="#commands" class="btn-get-started animate__animated animate__fadeInUp scrollto">Command list</a>
         </div>
         </div>
       </div>
