--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
             <p>
-              Here is a quick summary of what our bot can do, if you want to see some videos scroll down below.
+              Here are a few sweet features of Levi, to see the commands list scroll down.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i>24/7 Uptime, Levi will always be online to help you.</li>
-              <li><i class="ri-check-double-line"></i>Strong moderation </li>
-              <li><i class="ri-check-double-line"></i>Fast servers, say goodbye to waiting for the bot to laod!</li>
+              <li><i class="ri-check-double-line"></i>High Uptime - Levi will always be online to assist you.</li>
+              <li><i class="ri-check-double-line"></i>Fast Response - We host the bot on quality servers to prevent lag.</li>
+              <li><i class="ri-check-double-line"></i>Privacy - Your information is always secure with us.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
