--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div style="left:20">
           <a href="https://discord.gg/ScR7Y2c" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get support</a>
           <a href="https://discord.com/api/oauth2/authorize?client_id=759894371079290900&permissions=8&scope=bot" class="btn-get-started animate__animated animate__fadeInUp scrollto">Add the bot</a>
-          <a href="#commands" class="btn-get-started animate__animated animate__fadeInUp scrollto">Command list</a>
+          <a href="https://top.gg/bot/759894371079290900" class="btn-get-started animate__animated animate__fadeInUp scrollto">Top.gg Page</a>
         </div>
         </div>
       </div>
