Fixed compnerds name lol

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               </div>
               <div class="member-info">
                 <h4>CompNerd#6595</h4>
-                <span>"Website Developer"</span>
+                <span>Website Developer</span>
               </div>
             </div>
           </div>
