--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <div class="social-links">
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Levi Bot 2020</span></strong>. All Rights Reserved.
+        &copy; Copyright <strong><span>Levi Bot 2020-2021</span></strong>. All Rights Reserved.
       </div>
       <div class="credits">
 
