--- a/index.html
+++ b/index.html
@@ -138,25 +138,25 @@
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-toggle="tab" href="#tab-1">
               <i class="ri-gps-line"></i>
-              <h4 class="d-none d-lg-block">comp1</h4>
+              <h4 class="d-none d-lg-block">Moderation</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
             <a class="nav-link" data-toggle="tab" href="#tab-2">
               <i class="ri-body-scan-line"></i>
-              <h4 class="d-none d-lg-block">comp2</h4>
+              <h4 class="d-none d-lg-block">Utility</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
             <a class="nav-link" data-toggle="tab" href="#tab-3">
               <i class="ri-sun-line"></i>
-              <h4 class="d-none d-lg-block">comp3</h4>
+              <h4 class="d-none d-lg-block">Fun</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
             <a class="nav-link" data-toggle="tab" href="#tab-4">
               <i class="ri-store-line"></i>
-              <h4 class="d-none d-lg-block">comp4</h4>
+              <h4 class="d-none d-lg-block">Searching</h4>
             </a>
           </li>
         </ul>
