--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
   <!-- Site Description -->
-  <meta name="description" content="Levi's home on the interweb!"/>
+  <meta name="description" content="Levi's home on the interweb! Levi bot is a multi purpose discord bot aimed at making your life easier, by incorporating many features - including  Moderation, Fun, Utility, Customization and more - All in one bot. Try it today!"/>
 
   <title>Levi Discord Bot</title>
   <meta content="" name="descriptison">
