--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Levi bot is a multi purpose discord bot aimed at making your life easier, by incorporating many features - including Music, Moderation, Fun, Economy and Utility - All into one bot.
+              Levi bot is a multi purpose discord bot aimed at making your life easier, by incorporating many features - including Moderation, Fun, Utility, Customization and more - All in one bot.
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
