--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
                   comp1
                 </p>
                 <ul>
-                  <li><i class="ri-check-double-line"></i> comp1</li>
-                  <li><i class="ri-check-double-line"></i> comp1</li>
-                  <li><i class="ri-check-double-line"></i> Ucomp1</li>
+                  <li><i class="ri-check-double-line"></i> Ban, unban</li>
+                  <li><i class="ri-check-double-line"></i> Mute, unmute</li>
+                  <li><i class="ri-check-double-line"></i> Lock, unlock</li>
+                  <li><i class="ri-check-double-line"></i> Nickname, nuke</li>
+                  <li><i class="ri-check-double-line"></i> Clear, warn</li>
                 </ul>
                 <p>
                   comp1
