--- a/index.html
+++ b/index.html
@@ -165,10 +165,7 @@
           <div class="tab-pane active show" id="tab-1">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                <h3>comp1</h3>
-                <p class="font-italic">
-                  comp1
-                </p>
+                <h3>Command List</h3>
                 <ul>
                   <li><i class="ri-check-double-line"></i> Ban, unban</li>
                   <li><i class="ri-check-double-line"></i> Mute, unmute</li>
@@ -176,9 +173,6 @@
                   <li><i class="ri-check-double-line"></i> Nickname, nuke</li>
                   <li><i class="ri-check-double-line"></i> Clear, warn</li>
                 </ul>
-                <p>
-                  comp1
-                </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets/img/features-1.png" alt="" class="img-fluid">
