--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Team</h2>
-          <p>Our Hard Working Team</p>
+          <p>Our Hard Working Development Team</p>
         </div>
 
         <div class="row">
