--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <img src="assets/img/someone.png" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Someone#6969</h4>
+                <h4>Cian#9999</h4>
                 <span>Bot Developer</span>
               </div>
             </div>
@@ -347,7 +347,7 @@
                 <img src="assets/img/levi1.gif" width="1024" height="1024" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Levi.#1337</h4>
+                <h4>Levi.#0420</h4>
                 <span>Bot Developer</span>
               </div>
             </div>
